--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
   booking: #servizio2, il nostro container, quello che abbiamo creato nel dockerfile, il backend
     build: .
     image: booking #nome del jar che verrà mandato in esecuzione, deve coincidere con quello nel dockerfile
+    environment:
+      eureka.client.serviceUrl.defaultZone: http://discovery:8761/eureka/
     container_name: booking
     ports:
       - "7500:7500"
